// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns MRSS template with default values 1`] = `
Object {
  "rss": Object {
    "@version": "2.0",
    "@xmlns:atom": "http://www.w3.org/2005/Atom",
    "@xmlns:media": "http://search.yahoo.com/mrss/",
    "channel": Object {
      "atom:link": Object {
        "@href": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/mrss/",
        "@rel": "self",
        "@type": "application/rss+xml",
      },
      "description": "google news",
      "item": Array [
        Object {
          "#": Array [
            Object {
              "media:content": Object {
                "@bitrate": 2000,
                "@duration": 789,
                "@fileSize": 3368020,
                "@height": 720,
                "@isDefault": "true",
                "@type": "video/MP2T",
                "@url": "https://d3ujdjwa458jgt.cloudfront.net/out/v1/87998c783fb94bf0b965847d5c8b4392/index.m3u8",
                "@width": 1280,
                "media:category": "Video",
                "media:keywords": "sample,demo",
                "media:thumbnail": Object {
                  "@url": "hi/abcdefghijklmnopqrstuvwxyz=/dv8csq7v0ltdn.cloudfront.net/04-16-2020/t_95d8de29ea3b41caac132f0462c5c71a_name_file_1920x1080_5400_v4_.jpg",
                },
                "media:title": Object {
                  "$": "Inexact Odyssey, A Volcom Snowboarding Film",
                },
              },
            },
          ],
          "description": Object {
            "$": "",
          },
          "guid": Object {
            "#": "http://demo-prod.origin.arcpublishing.com/video/2020/04/16/inexact-odyssey-a-volcom-snowboarding-film/",
            "@isPermaLink": false,
          },
          "link": "http://demo-prod.origin.arcpublishing.com/video/2020/04/16/inexact-odyssey-a-volcom-snowboarding-film/",
          "pubDate": "Thu, 16 Apr 2020 19:55:25 +0000",
          "referenceid": undefined,
          "title": Object {
            "$": "Inexact Odyssey, A Volcom Snowboarding Film",
          },
        },
      ],
      "link": "http://demo-prod.origin.arcpublishing.com",
      "pubDate": StringMatching /\\\\w\\+, \\\\d\\+ \\\\w\\+ \\\\d\\{4\\} \\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\} \\\\\\+0000/,
      "title": "google news Videos",
    },
  },
}
`;

exports[`returns MRSS template without values 1`] = `
Object {
  "rss": Object {
    "@version": "2.0",
    "@xmlns:atom": "http://www.w3.org/2005/Atom",
    "@xmlns:media": "http://search.yahoo.com/mrss/",
    "channel": Object {
      "atom:link": Object {
        "@href": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/mrss/",
        "@rel": "self",
        "@type": "application/rss+xml",
      },
      "description": "google news",
      "item": Array [
        Object {
          "#": Array [
            Object {
              "media:content": Object {
                "@bitrate": 2000,
                "@duration": 789,
                "@fileSize": 3368020,
                "@height": 720,
                "@isDefault": "true",
                "@type": "video/MP2T",
                "@url": "https://d3ujdjwa458jgt.cloudfront.net/out/v1/87998c783fb94bf0b965847d5c8b4392/index.m3u8",
                "@width": 1280,
                "media:category": "Video",
                "media:keywords": "sample,demo",
                "media:thumbnail": Object {
                  "@url": "hi/abcdefghijklmnopqrstuvwxyz=/dv8csq7v0ltdn.cloudfront.net/04-16-2020/t_95d8de29ea3b41caac132f0462c5c71a_name_file_1920x1080_5400_v4_.jpg",
                },
                "media:title": Object {
                  "$": "Inexact Odyssey, A Volcom Snowboarding Film",
                },
              },
            },
          ],
          "guid": Object {
            "#": "http://demo-prod.origin.arcpublishing.com/video/2020/04/16/inexact-odyssey-a-volcom-snowboarding-film/",
            "@isPermaLink": false,
          },
          "link": "http://demo-prod.origin.arcpublishing.com/video/2020/04/16/inexact-odyssey-a-volcom-snowboarding-film/",
          "pubDate": "Thu, 16 Apr 2020 19:55:25 +0000",
          "referenceid": undefined,
        },
      ],
      "link": "http://demo-prod.origin.arcpublishing.com",
      "pubDate": StringMatching /\\\\w\\+, \\\\d\\+ \\\\w\\+ \\\\d\\{4\\} \\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\} \\\\\\+0000/,
      "title": "google news Videos",
    },
  },
}
`;
